# Node-Z-win

./: .gitignore  CHANGELOG  LICENSE  README.md  pyproject.toml  requirements.txt
formz/: __init__.py  app.py  box.py  button.py  dialog.py  image.py  label.py  progress.py  selection.py  style.py  switch.py  textinput.py  window.py
nodez/: __main__.py  app.py  client.py  command.py  commands.py  config.py  connect.py  home.py  request.py  setup.py  social.py  startup.py  system.py  toolbar.py  wizard.py
nodez/browser/: navigator.py
nodez/browser/styles/: box.py  button.py  input.py  webview.py
nodez/cash/: send.py  txlist.py
nodez/cash/styles/: box.py  button.py  container.py  image.py  input.py  label.py  selection.py  switch.py
nodez/config/: config.py  divers.py  index.py  network.py  rpc.py  txfee.py
nodez/config/options/: divers.py  explorer.py  index.py  network.py  rpc.py  txfee.py
nodez/config/styles/: box.py  button.py  input.py  label.py  scroll.py  switch.py
nodez/connect/: connect.py
nodez/connect/styles/: box.py  input.py  label.py
nodez/ecosys/: feature.py
nodez/ecosys/styles/: box.py  image.py
nodez/home/: banlist.py  home.py  manage.py  nodes.py  peers.py
nodez/home/styles/: box.py  button.py  container.py  divider.py  image.py  label.py  selection.py
nodez/insight/: address.py  block.py  explorer.py  transaction.py
nodez/insight/styles/: box.py  button.py  container.py  divider.py  image.py  input.py  label.py
nodez/main/: connect.py  download.py  social.py  start.py  wizard.py
nodez/main/styles/: box.py
nodez/main_window/: connect.py  download.py  social.py  start.py  wizard.py
nodez/main_window/styles/: box.py  button.py  divider.py  input.py  label.py
nodez/message/: chat.py
nodez/message/styles/: box.py  button.py  container.py  image.py  input.py  label.py  output.py
nodez/mining/: download.py  gputil.py  miner.py
nodez/mining/styles/: box.py  button.py  container.py  divider.py  input.py  label.py  selection.py
nodez/startup/: startup.py
nodez/startup/styles/: box.py  divider.py  label.py
nodez/styles/: box.py  button.py  divider.py  image.py  input.py  label.py  progressbar.py  switch.py
nodez/wallet/: address_info.py  manage.py  receive.py  txids_list.py
nodez/wallet/styles/: box.py  button.py  container.py  image.py  input.py  label.py  selection.py  switch.py  table.py
nodez/wizard/: download.py  social.py  start.py  system.py  wizard.py
nodez/wizard/styles/: box.py  button.py  label.py  progressbar.py
scripts/: build-win.bat  build-win.ps1
