
[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Node-Z"
bundle = "com.nodez"
version = "1.0.6"
url = "https://www.getbtcz.com"
license.file = "LICENSE"
author = "BTCZCommunity"
author_email = "dragkhai@gmail.com"

[tool.briefcase.app.nodez]
formal_name = "Node-Z"
description = "Full NodeZ"
icon = "nodez/resources/app_logo"

sources = [
    "nodez",
]

test_sources = [
    "tests",
]

requires = [
    "toga-core"
]

test_requires = [
    "pytest",
]

[tool.briefcase.app.nodez.windows]
requires = [
    "toga-winforms",
    "aiohttp",
    "qrcode",
    "psutil"
]

use_full_install_path = false

[tool.briefcase.app.nodez.macOS]
universal_build = true
requires = [
    "toga-cocoa",
    "std-nslog",
    "aiohttp"
]


[tool.briefcase.app.nodez.linux]
requires = [
    "toga-gtk",
    "requests",
    "aiohttp",
]


[tool.briefcase.app.nodez.linux.system.debian]
system_requires = [
    # Needed to compile pycairo wheel
    "libcairo2-dev",
    # Needed to compile PyGObject wheel
    "libgirepository1.0-dev",
]

system_runtime_requires = [
    # Needed to provide GTK and its GI bindings
    "gir1.2-gtk-3.0",
    "libgirepository-1.0-1",
    # Dependencies that GTK looks for at runtime
    "libcanberra-gtk3-module",
    # Needed to provide WebKit2 at runtime
    # "gir1.2-webkit2-4.0",
]


[tool.briefcase.app.nodez.linux.system.rhel]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo-gobject-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
]

system_runtime_requires = [
    # Needed to support Python bindings to GTK
    "gobject-introspection",
    # Needed to provide GTK
    "gtk3",
    # Dependencies that GTK looks for at runtime
    "libcanberra-gtk3",
    # Needed to provide WebKit2 at runtime
    # "webkit2gtk3",
]


[tool.briefcase.app.nodez.linux.system.suse]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
]

system_runtime_requires = [
    # Needed to provide GTK
    "gtk3",
    # Needed to support Python bindings to GTK
    "gobject-introspection", "typelib(Gtk) = 3.0",
    # Dependencies that GTK looks for at runtime
    "libcanberra-gtk3-0",
    # Needed to provide WebKit2 at runtime
    # "libwebkit2gtk3",
    # "typelib(WebKit2)",
]


[tool.briefcase.app.nodez.linux.system.arch]
system_requires = [
    # Needed to compile pycairo wheel
    "cairo",
    # Needed to compile PyGObject wheel
    "gobject-introspection",
    # Runtime dependencies that need to exist so that the
    # Arch package passes final validation.
    # Needed to provide GTK
    "gtk3",
    # Dependencies that GTK looks for at runtime
    "libcanberra",
    # Needed to provide WebKit2
    # "webkit2gtk",
]

system_runtime_requires = [
    # Needed to provide GTK
    "gtk3",
    # Needed to provide PyGObject bindings
    "gobject-introspection-runtime",
    # Dependencies that GTK looks for at runtime
    "libcanberra",
    # Needed to provide WebKit2 at runtime
    # "webkit2gtk",
]


[tool.briefcase.app.nodez.linux.appimage]
manylinux = "manylinux_2_28"

system_requires = [
    # Needed to compile pycairo wheel
    "cairo-gobject-devel",
    # Needed to compile PyGObject wheel
    "gobject-introspection-devel",
    # Needed to provide GTK
    "gtk3-devel",
    # Dependencies that GTK looks for at runtime, that need to be
    # in the build environment to be picked up by linuxdeploy
    "libcanberra-gtk3",
    "PackageKit-gtk3-module",
    "gvfs-client",
]

linuxdeploy_plugins = [
    "DEPLOY_GTK_VERSION=3 gtk",
]


[tool.briefcase.app.nodez.linux.flatpak]
flatpak_runtime = "org.gnome.Platform"
flatpak_runtime_version = "45"
flatpak_sdk = "org.gnome.Sdk"

# Web deployments
[tool.briefcase.app.nodez.web]
requires = [
    "toga-web"
]
style_framework = "Shoelace v2.3"

