
[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Node-Z"
bundle = "com.nodez"
version = "1.0.7"
url = "https://www.getbtcz.com"
license.file = "LICENSE"
author = "BTCZCommunity"
author_email = "dragkhai@gmail.com"

[tool.briefcase.app.nodez]
formal_name = "Node-Z"
description = "Full NodeZ"
icon = "nodez/resources/app_logo"

sources = [
    "nodez",
]

test_sources = [
    "tests",
]

requires = [
    "toga-core"
]

test_requires = [
    "pytest",
]

[tool.briefcase.app.nodez.windows]
requires = [
    "toga-winforms==0.4.5",
    "aiohttp",
    "qrcode",
    "psutil"
]

use_full_install_path = false

# Web deployments
[tool.briefcase.app.nodez.web]
requires = [
    "toga-web"
]
style_framework = "Shoelace v2.3"

